Adjust container to prevent sidebar from getting too narrow when resized

--- a/style.css
+++ b/style.css
@@ -18,12 +18,13 @@ svg {
 }
 .container {
   display: grid;
-  grid-template: repeat(16, 1fr) / repeat(16, 1fr);
+  grid-template-columns: minmax(180px, 2fr) repeat(13, 1fr);
+  grid-template-rows: repeat(16, 1fr);
   width: 100vw;
   height: 800px;
 }
 .sidebar {
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
   grid-row: 1 / -1;
   background-color: #0094d0;
   display: grid;
@@ -54,10 +55,10 @@ svg {
 }
 .header {
   grid-column: 4 / -1;
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
 }
 .main {
-  grid-column: 4 / -1;
-  grid-row: 3 / -1;
+  grid-column: 3 / -1;
+  grid-row: 4 / -1;
   background-color: #e0e8ef;
 }
